sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.code
def gnomeSort() {
for (i <- 1 to getNombreValeurs - 1){
	if(plusPetit(i-1,i) && plusPetit(i,i+1)){
		i = i + 1
	}
	else {
		echange(i-1,i+1)
		i = i - 1
	}
}
}